fix(customers): webkit max-width to logo to prevent weird wrap

--- a/src/_includes/components/index/customers/customers.css
+++ b/src/_includes/components/index/customers/customers.css
@@ -20,6 +20,7 @@
 
 .customer__logo {
   height: 58px;
+  max-width: 300px;
 }
 
 .customer__logo img {
